# metaflow-old

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  attributes.py  build.rs  experiment.py  fetch_subs.bat  graph_sort.py  nice.pmt  pmh.pmh  test.bat  test_case.pmt  testok.bat  testout.txt  update.bat
example_project/: hello_world.mf  project.mfm
extension/metaflow/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
extension/metaflow/syntaxes/: metaflow.tmLanguage.json
meta_ser/: Cargo.toml
meta_ser/src/: lib.rs
meta_ser/tests/: progress.rs
meta_ser/traits/src/: lib.rs
src/: cli.rs  main.rs  test_code.mf  test_code.pmt  test_gen_code.pmt  testing.rs
src/ast/: ast.rs  ast_test.mf  error.rs  mod.rs
src/attributes/: mod.rs
src/collector/: mod.rs
src/entities/: mod.rs
src/functions/: mod.rs
src/functions/test_project/: generator.py  project.mfm  root.mf
src/incr/: mod.rs
src/ir/: attributes.rs  functions.rs  mod.rs  module_tree.rs  types.rs
src/ir_gen/: cell.rs  context.rs  datatype.rs  error.rs  field.rs  fun.rs  mod.rs  module.rs  structure.rs  val.rs  var.rs
src/lexer/: cursor.rs  lexer_test.mf  line_data.rs  mod.rs  spam.rs  str_ref.rs  token.rs
src/module_tree/: builtin.mf  mod.rs  saved_code.txt
src/module_tree/test_project/: main.mf  project.mfm
src/modules/: builtin.mf  mod.rs
src/modules/test_project/: main.mf  (+1 more)
src/types/: mod.rs
src/util/: cell.rs  cli.rs  mod.rs  pool.rs  sdbm.rs  storage.rs  sym_table.rs
test_project/: root.mf
(+7 files in other folders)
