[package]
name = "prometh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
testing = []

[dependencies]
cranelift-frontend = "0.78.0"
cranelift-codegen = "0.78.0"
cranelift-module = "0.78.0"
cranelift-object = "0.78.0"
cranelift-native = "0.78.0"
target-lexicon = "0.12.2"
