[package]
name = "metaflow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
testing = []

[dependencies]
cranelift = { package = "metaflow-cranelift", path = "wasmtime/cranelift/metaflow", features = ["enable-quick-proc"], version = "0.79.0" }
quick-proc = { path = "wasmtime/crates/quick-proc" }
target-lexicon = "0.12.2"
